--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,11 @@
 html {
-	background: url('../images/background3.jpg') no-repeat center fixed;
+	background: url('../images/background.jpg') no-repeat center fixed;
 	background-size: cover;
+}
+
+p{
+    font-weight: bolder;
+    color: blue;
 }
 
 button {
@@ -47,6 +52,7 @@ input[type=submit]:hover , input[type=reset]:hover {
 
 #form{
 	float: right;
+    margin-right: 25px;
 	border-radius: 5px;
     background-color: #f2f2f2;
     padding: 20px;
